--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,8 @@
         "angularjs"
     ],
     "dependencies": {
-        "clipboard": "~1.5.5",
-        "angular": ">=1.2.0"
+        "clipboard": "^1.7",
+        "angular": "^1.2"
     },
     "ignore": [
         "README.md",
